--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.14.0",
     "@mantine/core": "^7.16.2",
     "@mantine/hooks": "^7.16.2",
+    "@mantinex/mantine-logo": "^1.1.0",
     "@tabler/icons-react": "^3.29.0",
     "clsx": "^2.1.1",
     "next": "15.1.6",
